--- a/site/index.html
+++ b/site/index.html
@@ -6,7 +6,7 @@ Git title for coursera test
 </head>
 <body>
 <h1>
-Hello Coursera! This is a minor addition to the body.
+Hello Coursera! This is a minor addition to the body for testing.
 </h1>
 </body>
 </html>
